--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,30 @@ hs_err_pid*
 
 ### VS Code ###
 .vscode/
+
+
+
+# dependencies
+**/node_modules
+**/node
+/.pnp
+.pnp.js
+
+# testing
+/coverage
+
+# production
+**/build
+**/src/main/resources/public
+
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
